<resources>
    <string name="app_name">Key Stage 3 Maths Tutor</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_online">Online functionality</string>
    <string name="nav_login">Sign in/up</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_score">Online scoreboard</string>
    <string name="title_activity_main">KS3 Maths</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="bottom_nav_quiz">Quiz</string>
    <string name="bottom_nav_game">Games</string>
    <string name="bottom_nav_guide">Guides</string>

    <string name="bottom_quiz_previous">Previous</string>
    <string name="bottom_quiz_check">Check Answer</string>
    <string name="bottom_quiz_next">Next</string>
    <string name="finish">Finish</string>

    <string name="answer_needed">Answer must not be blank</string>
    <string name="correct">That is the correct answer</string>
    <string name="incorrect">That is the incorrect answer</string>
    <string name="highScore">New high score</string>
    <string name="scoreboard">Personal\nScoreboard</string>
    <string name="guide_about">About</string>
    <string name="guide_example">Example questions</string>
    <string name="reveal_answer">reveal answer</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>

    <string name="Equations">Equations</string>
    <string name="algebraic_terms">Algebraic terms</string>
    <string name="inequalities">Inequalities</string>

    <string name="what_are_equations">An equation is formed when two expressions are said to be equal. \n
        Typically, equations contain unknown values which are often represented by letters such as ‘X’ and ‘Y’.\n\n
        When solving equations, the goal is to find the actual values of ‘X’ and ‘Y’.\n
        Example: I think of a number (X), multiply by 3, and add 2 with an answer of 17.\n
        When written as an algebraic equation:\n
        3X + 2 = 17\n
        To find the solution you must collect like? Terms together\n
        3X + 2 – 2 = 17 – 2\n
        3X = 15\n
        3X ÷ 3 = 15 ÷ 3\n
        X = 5</string>
    <string name="equation_questions">8X = 16,2X + 4 = 12,3X - 9 = X + 3</string>
    <string name="equation_answers">X = 2,X = 4,X = 6</string>

    <string name="about_text">Information about the app goes here. Final year project by UP804392</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="what_difficulty">What difficulty do you\nwant to try?</string>
    <string name="return_home">Return home</string>
    <string name="new_quiz">New Quiz</string>
    <string name="numerator">Numerator</string>
    <string name="denominator">Denominator</string>
    <string name="fraction">Fraction</string>
    <string name="answer">Answer</string>
    <string name="finish_message">Well done \n You have completed %s\n on %s difficulty"</string>
    <string name="final_score_message">Your final score is:\n%d"</string>
</resources>
