<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about" />
    </group>

    <item
        android:title="@string/nav_online"
        android:id="@+id/nav_online">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:title="@string/nav_login"
                android:visible="true"/>
            <item
                android:id="@+id/nav_logOut"
                android:title="@string/nav_logout"
                android:visible="false"/>
            <item
                android:id="@+id/nav_score"
                android:title="@string/nav_score" />
        </menu>
    </item>

</menu>
