<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_bar"
    app:startDestination="@id/navigation_guide">

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.up804392.keystage3mathstutor.ui.home.HomeQuizFragment"
        android:label="@string/bottom_nav_quiz"
        tools:layout="@layout/fragment_home_quiz"
        />

    <fragment
        android:id="@+id/navigation_guide"
        android:name="com.example.up804392.keystage3mathstutor.ui.home.HomeGuideFragment"
        android:label="@string/bottom_nav_guide"
        tools:layout="@layout/fragment_home_guide" />

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.example.up804392.keystage3mathstutor.ui.home.HomeQuizFragment"
        android:label="@string/bottom_nav_game"
        tools:layout="@layout/fragment_home_quiz" />

</navigation>