<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_default"
        android:text="@string/bottom_quiz_previous"
        android:textColor="@color/colorBlack"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_check"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_default"
        android:text="@string/bottom_quiz_check"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_next"
        app:layout_constraintStart_toEndOf="@+id/button_previous" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_default"
        android:text="@string/bottom_quiz_next"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_check" />

    <TextView
        android:id="@+id/textView_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_light"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_light"
        android:ems="10"
        android:hint="@string/answer"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_fraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fraction"
        android:textColor="@color/defaultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_answer" />

    <EditText
        android:id="@+id/editText_left"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@drawable/background_light"
        android:ems="10"
        android:hint="@string/numerator"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_separator"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_right"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@drawable/background_light"
        android:ems="10"
        android:hint="@string/denominator"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_separator"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_separator"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/background_light"
        android:text="/"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/constraint_layout_popup"
        layout="@layout/popup_quiz_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_optimizationLevel="dimensions" />

</androidx.constraintlayout.widget.ConstraintLayout>