<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_border"
    android:translationZ="20dp"
    android:visibility="invisible">

    <Button
        android:id="@+id/button_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_easy"
        android:text="@string/easy"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@id/button_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_difficulty" />

    <Button
        android:id="@+id/button_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_medium"
        android:text="@string/medium"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@id/button_hard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_easy" />

    <Button
        android:id="@+id/button_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_hard"
        android:text="@string/hard"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_medium" />

    <ImageButton
        android:id="@+id/imageButton_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_default"
        app:layout_constraintStart_toEndOf="@+id/textView_difficulty"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/textView_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:text="@string/what_difficulty"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>